--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 	<head>
 		<meta charset="UTF-8"/>
 		<title>My Spells</title>
+
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 	</head>
 
 	<body>
@@ -9,13 +13,12 @@
 			<select v-model="selectedSpell">
 				<option v-for="spell in spells" :value="spell.name">{{ spell.name }}</option>
 			</select>
+			{{ (spells.length / nbrTotalSpells * 100).toFixed(2) }}%
 
 			<div v-for="spell in filterByName()">
-				<div>Learn {{ spell.name }}</div>
+				<div>Learn |cffff3300{{ spell.name }}|r</div>
 				<br>
 				<learning :data="spell"></learning>
-				<br>
-				<div>{{ spell.description }}</div>
 			</div>
 		</div>
 
