--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
 		<title>My Spells</title>
 
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+	
+		<style>
+			body {
+				margin: 10px;
+			}
+		</style>
 	</head>
 
 	<body>
@@ -15,10 +20,30 @@
 			</select>
 			{{ (spells.length / nbrTotalSpells * 100).toFixed(2) }}%
 
-			<div v-for="spell in filterByName()">
-				<div>Learn |cffff3300{{ spell.name }}|r</div>
-				<br>
+			<div>
+				<button v-for="item, key in display" @click="onlyShow(key)">{{ item.name }}</button>
+			</div>
+			<div v-if="display.learning.show" v-for="spell in filterByName()">
 				<learning :data="spell"></learning>
+				<br>
+			</div>
+			<div v-if="display.basic.show" v-for="spell in filterByName()">
+				<basic :data="spell" :lvl="1"></basic>
+				<br>
+				<basic :data="spell" :lvl="2"></basic>
+				<br>
+				<basic :data="spell" :lvl="3"></basic>
+				<br>
+				<div v-if="!spell.ulti">
+					<basic :data="spell" :lvl="4"></basic>
+					<br>
+				</div>
+			</div>
+			<div v-if="display.edit.show" v-for="spell in filterByName()">
+				<formspell :data="copyOf(spell)" @post="updateSpell"></formspell>
+			</div>
+			<div v-if="display.json.show">
+				<pre>{{ spells }}</pre>
 			</div>
 		</div>
 
