--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@
 				<formspell :spell="copyOf(defaultSpell)" @post="updateSpell"></formspell>
 			</div>
 			<div v-if="display.json.show">
-				<pre>{{ spells }}</pre>
+				<div>
+					<button @click="showJson = !showJson">SHOW</button>
+				</div>
+				<pre v-show="showJson">{{ spells }}</pre>
+				<textarea cols="75" rows="40">{{ spells }}</textarea>
 			</div>
 		</div>
 
