add automatic field selector for next parameter selection and new spells :=)

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					<button @click="showJson = !showJson">SHOW</button>
 				</div>
 				<pre v-show="showJson">{{ spells }}</pre>
-				<textarea cols="75" rows="40">{{ spells }}</textarea>
+				<textarea cols="75" rows="40">const mySpellsLibrary = {{ spells }}</textarea>
 			</div>
 		</div>
 
