--- a/index.html
+++ b/index.html
@@ -5,12 +5,8 @@
 
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-	
-		<style>
-			body {
-				margin: 10px;
-			}
-		</style>
+
+		<link rel="stylesheet" href="styles.css">
 	</head>
 
 	<body>
@@ -51,10 +47,14 @@
 			<div v-if="display.struct.show">
 				<struct></struct>
 			</div>
+			<div v-if="display.heroes.show">
+				<heroes></heroes>
+			</div>
 		</div>
 
 		<script src="https://unpkg.com/vue"></script>
 		<script src="spells.js"></script>
+		<script src="heroes.js"></script>
 	    <script src="app.js"></script>
 	</body>
 </html>
